--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,10 @@ target_sources(app PRIVATE
         src/main.c
         src/sensor.c
         src/sensor_sim.c
+        src/radar_control.c
+        src/radar_processing.c
+        src/radar_display.c
+        src/radar_bus.c
+        src/camera_service.c
+        src/plate.c
     )
