--- a/prj.conf
+++ b/prj.conf
@@ -1,4 +1,4 @@
-CONFIG_LOG=y
+CONFIG_LOG=n
 CONFIG_LOG_DEFAULT_LEVEL=3
 
 CONFIG_MAIN_STACK_SIZE=2048
@@ -9,3 +9,7 @@ CONFIG_DISPLAY=y
 
 CONFIG_ZBUS=y
 
+CONFIG_ZBUS=y
+CONFIG_ZBUS_MSG_SUBSCRIBER=y
+
+CONFIG_TEST_RANDOM_GENERATOR=y
