--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@
 
 cmake_minimum_required(VERSION 3.20.0)
 
+set(ZEPHYR_EXTRA_MODULES "${CMAKE_CURRENT_SOURCE_DIR}/modules/camera_service/")
+
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(projeto)
 
@@ -12,7 +14,6 @@ target_sources(app PRIVATE
         src/radar_control.c
         src/radar_processing.c
         src/radar_display.c
-        src/radar_bus.c
-        src/camera_service.c
+        src/vehicle_infraction_plate.c
         src/plate.c
     )
