--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,11 +15,11 @@ target_sources(app PRIVATE
         src/main.c
         src/test_plate.c
         src/test_radar_processing.c
+        src/test_radar_display.c
 
         ${CMAKE_CURRENT_LIST_DIR}/../src/plate.c
         ${CMAKE_CURRENT_LIST_DIR}/../src/radar_processing.c
         ${CMAKE_CURRENT_LIST_DIR}/../src/radar_display.c
-        ${CMAKE_CURRENT_LIST_DIR}/../src/radar_control.c
         ${CMAKE_CURRENT_LIST_DIR}/../src/sensor.c
         ${CMAKE_CURRENT_LIST_DIR}/../src/vehicle_infraction_plate.c
     )
